# DE330_Training_2024

./: README.md  pyproject.toml
Exercises/Advanced/Simple_plugin/: README.md  plugins.toml
Exercises/Configure/Boundaries/: README.md  SOLUTION.md
Exercises/Configure/Macros/: README.md
Exercises/Configure/NamelistsFullpos/: README.md  SOLUTION.md
Exercises/Configure/NewDomain/: README.md
Exercises/Configure/New_domain/: README.md
Exercises/Configure/OutputSettings/: README.md
Exercises/Configure/Submission/: README.md
Exercises/Configure/SuiteControl/: REAMDE.md
Exercises/Develop/Add_a_task/: README.md
Exercises/Develop/Install_on_you_laptop/: REAMDE.md
Exercises/Develop/Simple_plugin/: README.md
Exercises/Develop/Stand_alone_task/: README.md  SOLUTION.md
Exercises/Introduction/First_run_on_atos/: README.md
Exercises/Introduction/Install_on_atos/: README.md
Exercises/Introduction/Time_to_show/: README.md
Exercises/Introduction/ecflow_setup/: setup_local_ecflow.md
Exercises/Plot/: README.md  basic_2Dplots.ipynb  cesar_tower_meteo_la1_t10_v1.2_20230923.nc  mapping.py  sqlite_reading.ipynb
Exercises/Plot/.ipynb_checkpoints/: basic_2Dplots-checkpoint.ipynb  sqlite_reading-checkpoint.ipynb
Exercises/Plot/data/: cesar_tower_meteo_la1_t10_v1.2_20230916.nc
Exercises/Verify/: README.md
Exercises/Verify/Basic_verification/: README.md
Exercises/Verify/Install_harp/: README.md
Exercises/Verify/Visualization/: README.md
exercises/Introduction/First_run_on_atos/: README.md
exercises/introduction/Install_on_atos/: README.md
(+18 files in other folders)
