[tool.poetry]
name = "DE330_Training_2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
cartopy = "^0.23.0"
toml = "^0.10.2"
ipython = "^8.25.0"
ipykernel = "^6.29.4"
xarray = "^2024.6.0"
cfgrib = "^0.9.12.0"
eccodes = "^1.7.0"
pygrib = "^2.1.5"
ecmwflibs = "^0.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"